[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mayuri", email = "martin.hainaut@ifosup.wavre.be"},
    {name = "Mayuri", email = "martin.hainaut@ifosup.wavre.be"},
]
dependencies = [
    "colorama>=0.4.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
tools = [
    "black>=23.7.0",
    "ruff>=0.0.287",
]

[tool.ruff]
select = ["E","F","I"]